--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,6 +7,7 @@
 }
 
 header {
+  width: 100%;
   text-align: center;
   background: rgba(255, 144, 14, 0.1);
 }
@@ -62,9 +63,10 @@ p {
 }
 .banner-img {
   margin-top: 50px;
-  width: 1440px;
-  height: 700px;
+  width: 100%;
+  height: 60vh;
   margin-bottom: 30px;
+  object-fit: contain;
 }
 /* end of header style */
 .second-section {
@@ -107,4 +109,31 @@ p {
   width: 537px;
   height: 78px;
   margin-bottom: 20px;
+}
+
+/*-----------------------
+     For small device 
+ -----------------------*/
+@media screen and (max-width: 576px) {
+  .first-zone {
+    display: block;
+    margin: 0;
+  }
+  header {
+    width: 1450px;
+  }
+  nav {
+    flex-direction: column;
+    flex-grow: 1;
+  }
+  ul {
+    flex-direction: column;
+  }
+  .second-section {
+    flex-direction: column;
+  }
+  .four-img {
+    grid-template-columns: max-content;
+    gap: 20px 20px;
+  }
 }
