--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,33 +12,33 @@ header {
   background: rgba(255, 144, 14, 0.1);
 }
 .first-zone {
-  margin: 0 240px;
+  margin: 0 20%;
 }
 nav {
   display: flex;
   justify-content: space-between;
-  padding-top: 30px;
+  padding-top: 5%;
 }
 ul {
   display: flex;
-  gap: 20px;
+  gap: 8%;
 }
 ul li {
   list-style: none;
   font-weight: 500;
-  font-size: 18px;
+  font-size: 1.3rem;
   color: #424242;
 }
 
 p {
   color: #727272;
   font-weight: 400;
-  font-size: 16px;
+  font-size: 1rem;
 }
 .logo {
   color: #131313;
   font-weight: 700;
-  font-size: 45px;
+  font-size: 3rem;
 }
 .primary-btn {
   width: 180px;
@@ -48,7 +48,7 @@ p {
   border: none;
   color: #ffffff;
   font-weight: 600;
-  font-size: 20px;
+  font-size: 1.2rem;
 }
 
 .first-details {
@@ -73,11 +73,13 @@ p {
   display: flex;
   margin: 30px 301px;
   align-items: center;
+  gap: 50px;
 }
 .four-img {
   display: grid;
-  grid-template-columns: repeat(2, 400px);
+  grid-template-columns: repeat(2, max-content);
   grid-template-rows: repeat(2, max-content);
+  gap: 10px 10px;
 }
 
 .four-img img {
@@ -106,7 +108,7 @@ p {
 .second-p {
   font-weight: 400;
   font-size: 16px;
-  width: 537px;
+  width: 450px;
   height: 78px;
   margin-bottom: 20px;
 }
@@ -130,7 +132,21 @@ p {
     flex-direction: column;
   }
   .four-img {
-    grid-template-columns: max-content;
-    gap: 20px 20px;
+    grid-template-columns: 1000px;
+    grid-template-rows: 1000px;
+    justify-items: center;
+
+    /* gap: 20px 20px; */
+  }
+  .second-section {
+    flex-direction: column;
+    width: 100%;
+    margin: 0;
+  }
+  .four-img img {
+    width: 100%;
+    height: fit-content;
+    object-fit: contain;
+    margin: 0 100px;
   }
 }
