--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,7 +3,6 @@
   --black: #131313;
 }
 * {
-  display: inline-block;
   margin: 0;
   box-sizing: border-box;
   font-family: "Work Sans", sans-serif;
@@ -243,7 +242,7 @@ p span {
 }
 footer {
   text-align: center;
-  margin: 100px 0;
+  margin: 100px auto;
 }
 .footer {
   padding: 40px;
@@ -261,7 +260,10 @@ h6 {
 /*-----------------------
      For small device
  -----------------------*/
-@media screen and (max-width: 576px) {
+@media only screen and (max-width: 576px) {
+  * {
+    display: inline-block;
+  }
   .first-zone {
     display: block;
     margin: 0;
@@ -276,6 +278,11 @@ h6 {
   ul {
     flex-direction: column;
   }
+  .first-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
   .four-img {
     grid-template-columns: 1000px;
     grid-template-rows: 1000px;
@@ -288,6 +295,10 @@ h6 {
     width: 100%;
     margin: 0;
   }
+  .fourth-section {
+    text-align: center;
+    margin-left: 450px;
+  }
   .four-img img {
     width: 100%;
     height: fit-content;
@@ -297,14 +308,30 @@ h6 {
   .third-section {
     flex-direction: column;
     row-gap: 10px;
+    justify-content: center;
+    align-items: center;
+  }
+  .cards {
+    gap: 20px;
+    align-items: center;
   }
   .fifth-section {
     flex-direction: column;
-    row-gap: 10px;
+    row-gap: 30px;
+    justify-content: center;
+    align-items: center;
+    flex-grow: 1;
+  }
+  .last-section {
+    width: 100%;
   }
   .brand-imgs {
     flex-direction: column;
-    row-gap: 20px;
+    row-gap: 100px;
     padding: 20px;
+    justify-content: center;
+  }
+  .footer {
+    margin-left: 400px;
   }
 }
